# soul-composer-app

./: .eslintrc  .prettierrc.js  README.md  package-lock.json  package.json
src/: App.tsx  index.html  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/device/: error.rs  mod.rs  packet.rs  proto_codec.rs  serial_comm.rs  serial_detect.rs
src-tauri/src/device/packet/: device_cfg.rs  device_info.rs  file_chunk.rs  misc.rs  mod.rs  pkt_header.rs
src-tauri/src/prog/arm/: algorithm_binary.rs  arm_error.rs  flash_device.rs  flash_stub_gen.rs  memory_range.rs  mod.rs
src/common/: hardware.ts
src/components/: bottomBar.tsx  configView.tsx  deviceInfoView.tsx  firmwareView.tsx  flashAlgoDialog.tsx  mainView.tsx  topBar.tsx
src/models/: SoulDevice.ts  webUIState.ts
src/native/: flashAlgoElf.ts  invoke.ts  usbComm.ts
