[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
thiserror = "1.0"
goblin = "0.4.3"
zip = "0.5"
base64 = "0.13.0"
cmsis-pack = "0.3.0"
log = "0.4"
scroll = "0.10"
serialport = "4.0.1"
serial-line-ip = "0.5.0"
bytes = "1.1.0"
lazy_static = "1.4.0"
futures = "0.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
