[package]
name = "soulcomposer"
version = "0.2.0"
description = "Soul Injector Configurator"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
license = "AGPL-3.0"
repository = ""
default-run = "soulcomposer"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
base64-serde = "0.6.1"
tauri = { version = "1.2.4", features = ["api-all"] }
thiserror = "1.0"
goblin = "0.4.3"
zip = "0.5"
base64 = "0.13.1"
cmsis-pack = "0.5.0"
log = "0.4"
scroll = "0.10"
serialport = "4.2.0"
serial-line-ip = "0.5.0"
bytes = "1.4.0"
lazy_static = "1.4.0"
futures = "0.3"
crc = "2.1.0"
num-traits = "0.2"
num-derive = "0.3"
hex = { version = "0.4.3", features = ["serde"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
